# bebop_lines

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
docs/: design_notes.md  index.md
examples/: conv_.cadences.py  conv_cadences.py  lines_in_key.py  pivot_amplitude.py  scale_compare.py  sliding_window.py
images/: .$hisotgrams.drawio.bkp  .$histograms.drawio.bkp  .$kernel_ideas.drawio.bkp  .$kernels.drawio.bkp  .$permutation_bar.drawio.bkp  kernel_ideas.drawio  kernels.drawio  permutation_bar.drawio
outputs/midi/: line_2025-05-11_14-24-45.mid  line_2025-05-11_14-27-28.mid  line_2025-05-11_14-36-38.mid  line_2025-05-11_14-39-01.mid  line_2025-05-11_14-46-12.mid  line_2025-05-11_18-52-10.mid  line_2025-05-11_20-07-18.mid  line_2025-05-14_20-07-22.mid  line_2025-05-14_20-07-23.mid
src/bebop_lines/: bebop_lines.py
src/bebop_lines.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/bebop_lines/group_action/: __init__.py  permutations.py
src/bebop_lines/melody/: __init__.py  bars.py  phrases.py
src/bebop_lines/print_sound/: __init__.py  midi.py
src/bebop_lines/solvers/: __init__.py  conv_match.py  key_match.py  pivots.py  trial_plot.py
src/bebop_lines/utils/: __init__.py  data_convert.py  gen_filenames.py  project.py  visualizers.py
tests/: test_permutations.py
tests/group_action/: test_permutations.py
tests/melody/: test_bars.py  test_phrases.py
tests/solvers/: test_conv_match.py  test_key_match.py
tests/utils/: test_data_convert.py
