[project]
name = "bebop_lines"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "TYLERSFOSTER", email = "tylerisnotavailable@gmail.com"},
]
dependencies = ["numpy>=2.2.5", "mido>=1.3.3", "matplotlib>=3.10.3", "pytest>=8.3.5"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
test = [
  "pytest>=8.3.5",
  "pytest-cov>=6.1.1"
]


